--- a/bibliography.bib
+++ b/bibliography.bib
@@ -774,7 +774,8 @@ year={2015}
 
 @article{compass,
 	Title = {{The Compass - Technical Guide to Boston Scientific Cardiac Rhythm Management Products}},
-	Year = {2007}}
+	Year = {2007}
+	}
 
 @article{model_checking,
 	Author = {Edmund M. Clarke and Orna Grumberg and Doron A. Peled},
