Adding intro (still to complete) and other edits

--- a/E.tex
+++ b/E.tex
@@ -1,6 +1,6 @@
 \chapter{A Dual Chamber Pacemaker Specification}
 
-The software component of medical devices are becoming more and more complex. Problems may arise when adding new functionality to already verified software. In this chapter we demonstrate the basic specification of a dual chamber pacemaker, as well as a mode-switch function on top of the basic functions. The specifications are based on the algorithm description in \cite{compass}.
+As part of the model-based design, it is very important to have a formal model of the device software. In our study, we focus on the implantable pacemaker since it is relatively simple among implantable cardiac devices as its functionality is based only on timing and does not consider signal morphology. This serves as a good base case to demonstrate the proposed methodology.  In this chapter we demonstrate the basic specification of a dual chamber pacemaker, as well as a mode-switch function on top of the basic functions. The specifications are based on the algorithm description in \cite{compass}.
 \begin{itemize}
 	\item What are the basic functions?
    \item What happens if new functionality are applied to the basic model?
