--- a/C.tex
+++ b/C.tex
@@ -126,7 +126,7 @@ During an EP testing procedure, the physician place catheters inside the patient
 			\label{fig:WB}
 		}
 \vspace{-5pt}
-\caption{(a) Electrograms of induced Wenckebach block in a patient. (b) Electrograms of induced Wenckebach block in the heart model with a basic cycle length of 420 msec}
+\caption{(a) Electrograms of induced Wenckebach block in a patient. (b) Electrograms of induced Wenckebach block in the heart model with a basic cycle length of 420 msec}. The heart model also displays lengthening in the A-H interval and block in A-V node (Marker 1). Rows 5 and 6 show the increase in the ERP and conduction delay of the A-V node.
 \vspace{-15pt}
 \end{figure*} 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
