--- a/D.tex
+++ b/D.tex
@@ -42,15 +42,15 @@ We use pacemaker as example to demonstrate how to convert physiological descript
 \textbf{1. Encoding Physiological Conditions:}  \figref{state} lists example heart conditions and their corresponding constraints on heart model parameters.
 \begin{figure}[!t]
 	\center
-%		\vspace{-10pt}
 	\includegraphics[width=0.70\textwidth]{figs/state.pdf}
 	\center
-	
+	\vspace{-10pt}	
 	\caption{Patient state and equivalence in the heart model}
+	\vspace{-10pt}	
 	\label{fig:state}
 \end{figure}
 \noindent
-\\\textbf{2. Conditional Requirements:} Physiological requirements are in general conditional requirements. Specifying conditional requirements enables tighter constraints on the closed-loop system. \figref{conditional} shows a list of conditional requirements used during the pacemaker case study. 
+\\\textbf{2. Conditional Requirements:} Physiological requirements are in general conditional requirements. Specifying conditional requirements enables tighter constraints on the closed-loop system. \figref{conditional} shows a list of conditional requirements for normal sinus rhythm (NSR), supraventricular tachycardia (SVT), and bradycardia used during the pacemaker case study. 
 \begin{figure}
 	\center
 	\includegraphics[width=0.7\textwidth]{figs/conditional.pdf}
@@ -74,11 +74,10 @@ We use pacemaker as example to demonstrate how to convert physiological descript
 For a closed-loop system including a heart $H$ and a pacemaker $P$: $S=H || P$ and two requirements $\varphi_1$ and $\varphi_2$ such that $\mathbb{P}_{\varphi_1}<\mathbb{P}_{\varphi_2}$, the following statement should always hold:
 \vspace{-5pt}
 $$H\models\varphi_2\rightarrow H||P\models\varphi_2$$
-\vspace{-5pt}
+\noindent
 meaning if a higher priority requirement is satisfied by the open-loop environment, it should be satisfied by the closed-loop system as well. An example violation of the statement is:
-\vspace{-5pt}
 $$H\not\models\varphi_1 \&\& H\models\varphi_2 \&\& H||P\models\varphi_1 \&\& H||P\not\models\varphi_2$$
-\vspace{-5pt}
+\noindent
 which should not be allowed. In our closed-loop verification of pacemaker, the list of physiological requirements with assigned priorities are showing in \figref{properties}.
 
 
