--- a/bibliography.bib
+++ b/bibliography.bib
@@ -361,10 +361,7 @@ year={2015}
 	Journal = {Software Freedom Law Center},
 	Title = {{Killed by Code: Software Transparency in Implantable Medical Devices}},
 	Year = {2010}}
-
-@misc{challenge,
-	Title = {{PACEMAKER System Specification. Boston Scientific. 2007.}}}
-
+	
 @inproceedings{challenge2,
 	Author = {Gomes, A. O. and Oliveira, M. V.},
 	Booktitle = {Proceedings of the 2nd World Congress on Formal Methods},
@@ -773,10 +770,18 @@ year={2015}
 	Year = {2013}}
 
 @article{compass,
+	Author = {{BSCI}},
+	Journal = {Device Documentation},
 	Title = {{The Compass - Technical Guide to Boston Scientific Cardiac Rhythm Management Products}},
 	Year = {2007}
 	}
 
+@article{challenge,
+	Author = {{Boston-Scientific}},
+	Journal = {Device Documentation},
+	Title = {{PACEMAKER System Specification. Boston Scientific}},
+	Year = {2007}}
+	
 @article{model_checking,
 	Author = {Edmund M. Clarke and Orna Grumberg and Doron A. Peled},
 	Publisher = {The MIT Press},
