--- a/B.tex
+++ b/B.tex
@@ -176,7 +176,17 @@ In EP testing and during pacemaker implantation, the local electrical activities
 \label{fig:egm_s}
 %\vspace{-15pt}
 \end{figure}
-
+\subsection{Heart On a Chip Platform}
+The heart models are also implemented on hardware platform (\figref{HOC}). With an analog interface the heart model can interact with a commercial pacemaker in real time. 
+\begin{figure}[!t]
+\center
+%\vspace{-15pt}
+		\includegraphics[width=0.8\textwidth]{figs/HOC.png}
+%\vspace{-10pt}
+\caption{Heart On a Chip Platform}
+\label{fig:HOC}
+%\vspace{-15pt}
+\end{figure}
 \section{Closed-loop Model Checking with Non-deterministic Heart Models }
 %\begin{itemize}
 	%\item What does nondeterminism do? Where can these model be used?
