--- a/bibliography.bib
+++ b/bibliography.bib
@@ -14,6 +14,15 @@ title="{Tech Report: Abstraction-Tree For Closed-loop Model Checking of Medical 
 journal={http://repository.upenn.edu/mlab$\_$papers/73},
 year={2015}
 
+@article{TECS,
+ author = {Pajic, Miroslav and Jiang, Zhihao and Lee, Insup and Sokolsky, Oleg and Mangharam, Rahul},
+ title = {Safety-critical Medical Device Development Using the UPP2SF Model Translation Tool},
+ journal = {ACM Trans. Embed. Comput. Syst.},
+ volume = {13},
+ number = {4s},
+ year = {2014},
+ pages = {127:1--127:26},
+} 
 
 }
 @article{cert_prob,
