Changed HOC figure to one with labels

--- a/B.tex
+++ b/B.tex
@@ -181,7 +181,7 @@ The heart models are also implemented on hardware platform (\figref{HOC}). With 
 \begin{figure}[!t]
 \center
 %\vspace{-15pt}
-		\includegraphics[width=0.8\textwidth]{figs/HOC.png}
+		\includegraphics[width=0.8\textwidth]{figs/PVS.pdf}
 %\vspace{-10pt}
 \caption{Heart On a Chip Platform}
 \label{fig:HOC}
